# tw-stock-radar

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_EN.md  VISION.md  analyst.py  app.py  app_launch.bat  auto_eod.py  calibrate.py  chips.py  daily_post.py  dashboard.html  eod.py  fundamentals.py  health.py  history.sample.json  indicators.py  loop.py  margin.py  news.py  notify.py  prefill_cache.py  pyproject.toml  query.py  realtime_quote.py  requirements.txt  scan.py  server.py  snapshot.py  state.sample.json  tdcc.py  team.html  team_app.pyw  team_server.py  track.py  twse_price.py  (+8 more)
.github/workflows/: publish.yml  test.yml
scripts/: launch_posts.md  post_reddit.py  post_twitter.py
tests/: _util.py  run_tests.py  test_chips_parser.py  test_fundamentals.py  test_health.py  test_indicators.py  test_indicators_ext.py  test_json_safe.py  test_margin_parser.py  test_news.py  test_realtime_quote.py  test_scan_signals.py  test_tdcc_parser.py  test_track.py  test_zones.py
tw_stock_radar/: __main__.py
